<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15sp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_medium"
        android:gravity="center"
        android:text="@string/text_title"
        android:textSize="@dimen/textSize_large" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit1"
        android:textSize="@dimen/textSize_medium"
        />

    <EditText
        android:id="@+id/edit1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_medium"
        android:hint="@string/edit_hint1"
        android:inputType="text"
        android:textSize="@dimen/textSize_medium"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit2"
        android:textSize="@dimen/textSize_medium"/>

    <EditText
        android:id="@+id/edit2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_medium"
        android:hint="@string/edit_hint2"
        android:inputType="numberDecimal"
        android:textSize="@dimen/textSize_medium"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit3"
        android:textSize="@dimen/textSize_medium"/>

    <EditText
        android:id="@+id/edit3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_medium"
        android:hint="@string/edit_hint3"
        android:inputType="numberDecimal"
        android:textSize="@dimen/textSize_medium"/>

    <Button
        android:id="@+id/btnResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_medium"
        android:text="@string/btnResult" />

    <TextView
        android:id="@+id/textResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textResult"
        android:textColor="@color/red"
        android:textSize="@dimen/textSize_medium"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>